BURP.output
Grammaire

    0 $accept: command $end

    1 command: WAIT expression
    2        | IF condition THEN NOMBRE
    3        | GOTO NOMBRE
    4        | POKE expression expression
    5        | SHOOT expression expression
    6        | ENGINE expression expression

    7 condition: expression CMP expression

    8 expression: NOMBRE
    9           | SELF
   10           | SPEED
   11           | TARGETX expression expression expression
   12           | TARGETY expression expression expression
   13           | STATE expression
   14           | GPSX expression
   15           | GPSY expression
   16           | PARA_O expression OP expression PARA_F
   17           | PEEK expression
   18           | RAND expression
   19           | ANGLE expression expression expression expression
   20           | DISTANCE expression expression expression expression
   21           | CARDINAL


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
PARA_O (258) 16
PARA_F (259) 16
PEEK (260) 17
RAND (261) 18
CARDINAL (262) 21
SELF (263) 9
SPEED (264) 10
STATE (265) 13
GPSX (266) 14
GPSY (267) 15
ANGLE (268) 19
TARGETX (269) 11
TARGETY (270) 12
DISTANCE (271) 20
WAIT (272) 1
POKE (273) 4
ENGINE (274) 6
SHOOT (275) 5
GOTO (276) 3
IF (277) 2
THEN (278) 2
NOMBRE <nombre> (279) 2 3 8
CMP <tuple> (280) 7
OP <tuple> (281) 16


Non-terminaux, suivis des règles où ils apparaissent

$accept (27)
    à gauche: 0
command (28)
    à gauche: 1 2 3 4 5 6, à droite: 0
condition <nombre> (29)
    à gauche: 7, à droite: 2
expression <nombre> (30)
    à gauche: 8 9 10 11 12 13 14 15 16 17 18 19 20 21, à droite:
    1 4 5 6 7 11 12 13 14 15 16 17 18 19 20


État 0

    0 $accept: . command $end

    WAIT    décalage et aller à l'état 1
    POKE    décalage et aller à l'état 2
    ENGINE  décalage et aller à l'état 3
    SHOOT   décalage et aller à l'état 4
    GOTO    décalage et aller à l'état 5
    IF      décalage et aller à l'état 6

    command  aller à l'état 7


État 1

    1 command: WAIT . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 22


État 2

    4 command: POKE . expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 23


État 3

    6 command: ENGINE . expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 24


État 4

    5 command: SHOOT . expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 25


État 5

    3 command: GOTO . NOMBRE

    NOMBRE  décalage et aller à l'état 26


État 6

    2 command: IF . condition THEN NOMBRE

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    condition   aller à l'état 27
    expression  aller à l'état 28


État 7

    0 $accept: command . $end

    $end  décalage et aller à l'état 29


État 8

   16 expression: PARA_O . expression OP expression PARA_F

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 30


État 9

   17 expression: PEEK . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 31


État 10

   18 expression: RAND . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 32


État 11

   21 expression: CARDINAL .

    $défaut  réduction par utilisation de la règle 21 (expression)


État 12

    9 expression: SELF .

    $défaut  réduction par utilisation de la règle 9 (expression)


État 13

   10 expression: SPEED .

    $défaut  réduction par utilisation de la règle 10 (expression)


État 14

   13 expression: STATE . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 33


État 15

   14 expression: GPSX . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 34


État 16

   15 expression: GPSY . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 35


État 17

   19 expression: ANGLE . expression expression expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 36


État 18

   11 expression: TARGETX . expression expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 37


État 19

   12 expression: TARGETY . expression expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 38


État 20

   20 expression: DISTANCE . expression expression expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 39


État 21

    8 expression: NOMBRE .

    $défaut  réduction par utilisation de la règle 8 (expression)


État 22

    1 command: WAIT expression .

    $défaut  réduction par utilisation de la règle 1 (command)


État 23

    4 command: POKE expression . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 40


État 24

    6 command: ENGINE expression . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 41


État 25

    5 command: SHOOT expression . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 42


État 26

    3 command: GOTO NOMBRE .

    $défaut  réduction par utilisation de la règle 3 (command)


État 27

    2 command: IF condition . THEN NOMBRE

    THEN  décalage et aller à l'état 43


État 28

    7 condition: expression . CMP expression

    CMP  décalage et aller à l'état 44


État 29

    0 $accept: command $end .

    $défaut  accepter


État 30

   16 expression: PARA_O expression . OP expression PARA_F

    OP  décalage et aller à l'état 45


État 31

   17 expression: PEEK expression .

    $défaut  réduction par utilisation de la règle 17 (expression)


État 32

   18 expression: RAND expression .

    $défaut  réduction par utilisation de la règle 18 (expression)


État 33

   13 expression: STATE expression .

    $défaut  réduction par utilisation de la règle 13 (expression)


État 34

   14 expression: GPSX expression .

    $défaut  réduction par utilisation de la règle 14 (expression)


État 35

   15 expression: GPSY expression .

    $défaut  réduction par utilisation de la règle 15 (expression)


État 36

   19 expression: ANGLE expression . expression expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 46


État 37

   11 expression: TARGETX expression . expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 47


État 38

   12 expression: TARGETY expression . expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 48


État 39

   20 expression: DISTANCE expression . expression expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 49


État 40

    4 command: POKE expression expression .

    $défaut  réduction par utilisation de la règle 4 (command)


État 41

    6 command: ENGINE expression expression .

    $défaut  réduction par utilisation de la règle 6 (command)


État 42

    5 command: SHOOT expression expression .

    $défaut  réduction par utilisation de la règle 5 (command)


État 43

    2 command: IF condition THEN . NOMBRE

    NOMBRE  décalage et aller à l'état 50


État 44

    7 condition: expression CMP . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 51


État 45

   16 expression: PARA_O expression OP . expression PARA_F

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 52


État 46

   19 expression: ANGLE expression expression . expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 53


État 47

   11 expression: TARGETX expression expression . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 54


État 48

   12 expression: TARGETY expression expression . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 55


État 49

   20 expression: DISTANCE expression expression . expression expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 56


État 50

    2 command: IF condition THEN NOMBRE .

    $défaut  réduction par utilisation de la règle 2 (command)


État 51

    7 condition: expression CMP expression .

    $défaut  réduction par utilisation de la règle 7 (condition)


État 52

   16 expression: PARA_O expression OP expression . PARA_F

    PARA_F  décalage et aller à l'état 57


État 53

   19 expression: ANGLE expression expression expression . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 58


État 54

   11 expression: TARGETX expression expression expression .

    $défaut  réduction par utilisation de la règle 11 (expression)


État 55

   12 expression: TARGETY expression expression expression .

    $défaut  réduction par utilisation de la règle 12 (expression)


État 56

   20 expression: DISTANCE expression expression expression . expression

    PARA_O    décalage et aller à l'état 8
    PEEK      décalage et aller à l'état 9
    RAND      décalage et aller à l'état 10
    CARDINAL  décalage et aller à l'état 11
    SELF      décalage et aller à l'état 12
    SPEED     décalage et aller à l'état 13
    STATE     décalage et aller à l'état 14
    GPSX      décalage et aller à l'état 15
    GPSY      décalage et aller à l'état 16
    ANGLE     décalage et aller à l'état 17
    TARGETX   décalage et aller à l'état 18
    TARGETY   décalage et aller à l'état 19
    DISTANCE  décalage et aller à l'état 20
    NOMBRE    décalage et aller à l'état 21

    expression  aller à l'état 59


État 57

   16 expression: PARA_O expression OP expression PARA_F .

    $défaut  réduction par utilisation de la règle 16 (expression)


État 58

   19 expression: ANGLE expression expression expression expression .

    $défaut  réduction par utilisation de la règle 19 (expression)


État 59

   20 expression: DISTANCE expression expression expression expression .

    $défaut  réduction par utilisation de la règle 20 (expression)
